# crustydb-upstream

./: .CRUSTYROOT  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: clippy.yml
e2e-tests/: Cargo.toml
e2e-tests/src/: lib.rs  main.rs  sqllogictest_utils.rs
e2e-tests/testdata/: agg1  agg2  filter1  filter2  join1  match  table_creation
src/cli-crusty/: Cargo.toml
src/cli-crusty/src/: lib.rs  main.rs
src/common/: Cargo.toml
src/common/src/: ast_expr.rs  bytecode_expr.rs  catalog.rs  commands.rs  crusty_graph.rs  data_reader.rs  datatypes.rs  error.rs  ids.rs  lib.rs  operation.rs  query_result.rs  storage_trait.rs  table.rs  testutil.rs
src/common/src/logical_plan/: logical_op.rs  mod.rs
src/common/src/physical_plan/: mod.rs  physical_op.rs
src/common/src/traits/: index_trait.rs  mod.rs  stat_manager_trait.rs  transaction_manager_trait.rs
src/index/: Cargo.toml
src/index/src/: index_manager.rs  lib.rs  tree.rs
src/optimizer/: Cargo.toml
src/optimizer/src/: lib.rs  optimizer.rs  pushdown_predicate.rs  pushdown_projection.rs  testutil.rs
src/queryexe/: Cargo.toml
src/queryexe/src/: lib.rs  testutil.rs
src/queryexe/src/mutator/: mod.rs
src/queryexe/src/opiterator/: aggregate.rs  cross_join.rs  filter.rs  hash_join.rs  mod.rs  nested_loop_join.rs  project.rs  seqscan.rs  tuple_iterator.rs  update.rs
src/queryexe/src/query/: executor.rs  mod.rs  planner.rs  translate_and_validate.rs
src/queryexe/src/stats/: mod.rs
src/server/: Cargo.toml
src/server/src/: conductor.rs  daemon.rs  database_state.rs  handler.rs  lib.rs  main.rs  server.rs  server_state.rs  sql_parser.rs  worker.rs
src/storage/: Cargo.toml
src/storage/heapstore/: Cargo.toml
src/storage/heapstore/benches/: page_bench.rs  sm_bench.rs
src/storage/heapstore/src/: bp_tests.rs  buffer_pool.rs  heap_page.rs  heapfile.rs  heapfileiter.rs  lib.rs  page.rs  storage_manager.rs  testutil.rs
src/storage/heapstore/tests/: sm_integration.rs
src/storage/memstore/: Cargo.toml
src/storage/memstore/src/: storage_manager.rs
src/storage/src/: lib.rs  storage_common.rs
src/txn_manager/: Cargo.toml
src/txn_manager/src/: lib.rs  lockmanager.rs  mock_tm.rs  transactions.rs
src/utilities/: Cargo.toml
src/utilities/src/: csv_compare.rs  lib.rs  random.rs  timer.rs  vec_compare.rs
