[workspace]
resolver = "2"

members = [
    "src/common",
    "src/storage/heapstore",
    "src/storage/memstore",
    "src/common",
    "src/cli-crusty",
    #"src/server",
    "src/txn_manager",
    #"src/optimizer",
    #"src/queryexe",
    "src/utilities",
]
exclude = [
    "e2e-benchmarks",
    "e2e-tests",
    "tpch",
    "benchmarks",
]

[profile.release]
debug = true
lto = true
panic = 'abort'
codegen-units = 1
