[package]
name = "queryexe"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "William Ma <williamma@uchicago.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false


[dependencies]
sqlparser = "0.41"
log = "0.4"
csv ="1.3"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
chrono = "0.4"
serde_json = "1.0"
rand = { version = "0.8", features = [ "small_rng" ] }
common = { path ="../common"}
txn_manager = { path = "../txn_manager"}
storage = { path = "../storage" }
index = { path = "../index"}