[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstest = "0.18"
tempfile = "3.9"
heapstore = { path = "./heapstore" }
memstore = { path = "./memstore" }
utilities = { path = "../utilities" }
common = { path = "../common" }