[package]
name = "utilities"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "William Ma <williamma@uchicago.edu>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = "0.4"
rand = "0.8"
