[package]
name = "heapstore"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "William Ma <williamma@uchicago.edu>"]
edition = "2021"

[features]
default = ["profile"]
profile = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false


[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
temp_testdir = "0.2"
rand = "0.8"
csv = "1.3"
common = { path = "../../common" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "page_bench"
harness = false

